--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1527,30 +1527,18 @@ footer {
 /* Contact Page */
 
 /* Contact Section Styling */
-.contact {
-
-    .icon-circle {
-        width: 60px;
-        height: 60px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+.contact-info {
+    .text-theme {
+        color: $theme;
     }
 
-    .yoga-session {
-        .session-image {
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-        }
+    .bg-theme {
+        background-color: $theme;
+    }
 
-        .session-content {
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-            padding: 20px;
-            h3, p {
-                color: $white; // White text color
-            }
-        }
+    .contact-icon {
+        width: 50px;
+        height: 50px;
     }
 }
 
