--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -135,6 +135,14 @@ a {
   height: 48px;
 }
 
+.btn-outline-light {
+  border-width: 2px;
+  border-style: double;
+  font-weight: bolder;
+  font-size: 22px;
+  text-transform: uppercase;
+}
+
 .theme-design {
   border-radius: 20px 0 20px 0;
 }
@@ -339,7 +347,7 @@ footer .link-animated a:hover {
 }
 .carousel .carousel-inner .carousel-item .carousel-caption {
   position: absolute;
-  top: 48%;
+  top: 47%;
   left: 30%;
   transform: translate(-50%, -50%);
   text-align: left;
