--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -138,7 +138,7 @@ a {
     border-width: 2px; // Adjust border width
     border-style: double; // Use different border styles like dotted, dashed, etc.
     font-weight: bolder;
-    font-size: 22px;
+    font-size: 20px;
     text-transform: uppercase;
 }
 
@@ -472,9 +472,9 @@ footer {
         padding: 30px;
 
         h2 {
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: $dark;
+            font-size: 1.9rem;
+            font-weight: 600;
+            text-transform: uppercase;
         }
 
         p {
@@ -947,7 +947,6 @@ footer {
 
     p {
         color: #555; // Slightly muted color for paragraph text
-        font-weight: 600; // Semi-bold font for emphasis
         margin-bottom: 15px; // Margin below paragraph
     }
 
