--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -1274,8 +1274,6 @@ footer .link-animated a:hover {
     font-size: 1.1rem;
   }
 }
-/* Contact Page */
-/* Contact Section Styling */
 .contact-info .text-theme {
   color: #3391e6;
 }
@@ -1285,6 +1283,24 @@ footer .link-animated a:hover {
 .contact-info .contact-icon {
   width: 50px;
   height: 50px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+.contact-info i {
+  font-size: 20px;
+}
+.contact-info ul {
+  padding: 0;
+  list-style: none;
+}
+.contact-info li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
 /* Desktop Only */
